обновил internal and handler's
